--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,19 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-dona titulo="Ventas"
+              [label]="labels1"
+              [datasets]="datasets1">
+            </app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona titulo="Compras"></app-dona>
+  </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <app-dona titulo="Usuarios"></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona titulo="Visitas"></app-dona>
+  </div>
+</div>
