--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -203,7 +203,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/1.jpg"
+                      [src]="usuario.imagenUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -219,7 +219,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/2.jpg"
+                      [src]="usuario.imagenUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -237,7 +237,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/3.jpg"
+                        [src]="usuario.imagenUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -253,7 +253,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/4.jpg"
+                      [src]="usuario.imagenUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -319,7 +319,7 @@
             aria-haspopup="true"
             aria-expanded="false"
             ><img
-              src="./assets/images/users/1.jpg"
+              [src]="usuario.imagenUrl"
               alt="user"
               class="profile-pic"
           /></a>
@@ -328,13 +328,16 @@
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img src="./assets/images/users/1.jpg" alt="user" />
+                    <img [src]="usuario.imagenUrl" alt="user" />
                   </div>
                   <div class="u-text">
-                    <h4>Steave Jobs</h4>
-                    <p class="text-muted">varun@gmail.com</p>
+                    <h4> {{ usuario.nombre | titlecase }}</h4>
+                    <p class="text-muted">
+                      {{ usuario.email | titlecase }}
+                      {{ (usuario.email.length > 20) ? '...': '' }}
+                    </p>
                     <a
-                      href="pages-profile.html"
+                      routerLink="./perfil"
                       class="btn btn-rounded btn-danger btn-sm"
                       >View Profile</a
                     >
@@ -343,7 +346,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-user"></i> My Profile</a>
+                <a routerLink="./perfil"><i class="ti-user"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="ti-wallet"></i> My Balance</a>
