--- a/src/app/pages/mantenimientos/medicos/medicos.component.html
+++ b/src/app/pages/mantenimientos/medicos/medicos.component.html
@@ -1,13 +1,17 @@
 
 <!-- Barra búsqueda-->
-<div class="row animate fadeIn fast">
+<div  class="row animate fadeIn fast" >
   <div class="col-12">
       <div class="card">
           <div class="card-body">
 
+
+
             <input  type="text"
                     class="form-control"
-                    placeholder="Buscar Usuario..." >
+                    placeholder="Buscar médico..."
+                    (keyup)="buscar(txtTermino.value)"
+                    #txtTermino>
 
           </div>
       </div>
@@ -15,7 +19,8 @@
 </div>
 
 <!-- Loader -->
-<div class="row animate fadeIn fast">
+<div  class="row animate fadeIn fast"
+      *ngIf="cargando" >
   <div class="col-12">
 
       <div class="alert alert-success text-center">
@@ -29,36 +34,65 @@
 </div>
 
 <!-- Tabla -->
-<div class="row">
+<div class="row"
+    *ngIf="!cargando">
 <div class="col-12">
   <div class="card">
       <div class="card-body">
-          <h4 class="card-title">Usuarios</h4>
-          <h6 class="card-subtitle">Usuarios registrados en mi aplicación</h6>
+
+
+        <div class="row">
+          <div class="col-8">
+            <h4 class="card-title">Médicos ({{ medicos.length  }})</h4>
+            <h6 class="card-subtitle">Médicos registrados en mi aplicación</h6>
+          </div>
+          <div class="col">
+            <div class="text-right">
+              <a  class="btn btn-primary"
+                  routerLink="/dashboard/medico/nuevo">
+                  <i class="fa fa-hospital-o"></i>
+                  Crear Médico
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+
           <div class="table-responsive">
               <table class="table table-bordered">
                   <thead>
                       <tr>
-                          <th>Avatar</th>
-                          <th>Correo</th>
+                          <th class="w100">Foto</th>
                           <th>Nombre</th>
-                          <th>Role</th>
-                          <th>Auth</th>
-                          <th class="text-nowrap">Action</th>
+
+                          <th class="w100 text-nowrap">Action</th>
                       </tr>
                   </thead>
                   <tbody>
 
-                    <tr>
-                        <td>Lunar probe project</td>
-                        <td>Lunar probe project</td>
-                        <td>Lunar probe project</td>
-                        <td>Lunar probe project</td>
-                        <td>Lunar probe project</td>
+                    <tr *ngFor="let medico of medicos">
+                      <td class="text-center">
+                        <img  class="avatar cursor"
+                              [src]="medico.img! | imagen:'medicos'"
+                              [alt]="medico.nombre"
+                              (click)="abrirModal(medico)"
+                              >
+                      </td>
+                        <td>{{ medico.nombre}} </td>
+
 
                           <td class="text-nowrap text-center">
-                              <a href="#" data-toggle="tooltip" data-original-title="Editar"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
-                              <a href="#" data-toggle="tooltip" data-original-title="Borrar"> <i class="fa fa-close text-danger"></i> </a>
+                              <a [routerLink]="['/dashboard/medico', medico._id]"data-toggle="tooltip" data-original-title="Editar"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
+
+                              <a  class="cursor"
+                                  data-toggle="tooltip"
+                                  data-original-title="Borrar"
+                                  (click)="borrarMedico(medico)"
+                                  >
+
+                                  <i class="fa fa-close text-danger"></i>
+                                </a>
                           </td>
                       </tr>
 
@@ -134,11 +168,12 @@
                   </tbody>
               </table>
 
-              <button class="btn btn-secondary">Anterior</button>
+             <!--  <button class="btn btn-secondary">Anterior</button>
               &nbsp;
-              <button class="btn btn-secondary">Siguiente</button>
+              <button class="btn btn-secondary">Siguiente</button> -->
           </div>
       </div>
   </div>
 </div>
 </div>
+
